crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_root_vertical_rtl.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
assertion_line: 1155
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-orientation",
            ),
            String(
                "vertical",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Dir,
            String(
                "rtl",
            ),
        ),
    ],
    styles: [],
}
