crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_tab_reorderable_disabled.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).tab_attrs(&key(\"b\"), false))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "tab",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                RoleDescription,
            ),
            String(
                "draggable tab",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "tabs-panel-s-62",
            ),
        ),
        (
            Id,
            String(
                "tabs-tab-s-62",
            ),
        ),
        (
            Role,
            String(
                "tab",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
