crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_tab_reorderable_selected_focus_visible.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).tab_attrs(&key(\"a\"), true))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "tab",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
        (
            Aria(
                RoleDescription,
            ),
            String(
                "draggable tab",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "tabs-panel-s-61",
            ),
        ),
        (
            Id,
            String(
                "tabs-tab-s-61",
            ),
        ),
        (
            Role,
            String(
                "tab",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
